[package]
name = "claphost"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clack-host = { git = "https://github.com/prokopyl/clack" }
jack = "0.11.4"
miette = { version = "5.10.0", features = ["fancy"] }
rtrb = "0.2.3"

[dependencies.clack-extensions]
git = "https://github.com/prokopyl/clack"
features = ["clack-host", "audio-ports", "gui", "log", "params", "timer"]
